2012-06-06  Peter Bloomfield

	* src/balsa-app.c (find_url_func), (find_url), (find_url_idle_cb),
	(balsa_find_url): block the subthread and use an idle callback
	to find the BalsaMailboxNode for the URL.

2012-06-06  Peter Bloomfield

	* libbalsa/mime-stream-shared.c
	(libbalsa_mime_stream_shared_lock): build with glib < 2.32.

2012-06-05  Peter Bloomfield

	Make changes in previous commit conditional on glib version
	at least 2.32.

	* libbalsa/imap-server.c (libbalsa_imap_server_init),
	(libbalsa_imap_server_finalize): make previous changes
	conditional on glib version at least 2.32.
	* libbalsa/libbalsa-conf.c (lbc_lock), (lbc_unlock): ditto.
	* libbalsa/mime-stream-shared.c (lbmss_stream_class_init),
	(libbalsa_mime_stream_shared_lock),
	(libbalsa_mime_stream_shared_unlock): ditto.

2012-06-05  Peter Bloomfield

	Deprecation cleanup; fixes bgo #677381

	* libbalsa/imap-server.c (libbalsa_imap_server_init),
	(libbalsa_imap_server_finalize): deprecation cleanup.
	* libbalsa/libbalsa-conf.c (lbc_lock), (lbc_unlock): ditto.
	* libbalsa/mime-stream-shared.c (lbmss_stream_class_init),
	(libbalsa_mime_stream_shared_lock),
	(libbalsa_mime_stream_shared_unlock): ditto.

2012-06-03  Peter Bloomfield

	* src/main-window.c: change sensitivity of mail-check button in
	the main thread, in an idle callback.

2012-06-03  Peter Bloomfield

	Call Gtk from only the main thread when opening a mailbox

	* libbalsa/mailbox.c (lbm_cache_message): avoid infinite
	recursion.
	* libbalsa/mailbox.h: do not export
	libbalsa_mailbox_index_entry_new_from_msg.
	* src/balsa-index.c (bndx_set_mailbox), (bndx_open_mailbox),
	(balsa_index_load_mailbox_node): open mailbox in a subthread.
	* src/balsa-index.h: do not export balsa_index_load_mailbox_node
	and balsa_index_scroll_on_open.
	* src/main-window.c: start opening mailbox in the main thread.

2012-05-28  Peter Bloomfield

	* src/balsa-index.c (bi_view_on_open,
	balsa_index_scroll_on_open): set the cursor on the most recent