@@ -1,5 +1,11 @@
 2012-06-06  Peter Bloomfield
 
+	* libbalsa/mailbox.c (libbalsa_mailbox_close), (lbm_msgno_removed),
+	(lbm_msgno_removed_idle_cb), (libbalsa_mailbox_msgno_removed):
+	use an idle callback to remove the message from the tree-model.
+
+2012-06-06  Peter Bloomfield
+
 	* src/balsa-app.c (find_url_func), (find_url), (find_url_idle_cb),
 	(balsa_find_url): block the subthread and use an idle callback
 	to find the BalsaMailboxNode for the URL.
